# Azaan

./: CMakeLists.txt  README.md  Runner.cpp  TimeChecker.cpp  main.cpp
Src/: CMakeLists.txt  Runner.cpp  Runner.h  TimeChecker.cpp  TimeChecker.h  TimeLoader.cpp  TimeLoader.h  Timer.cpp  Timer.h  TimerInterface.h
UnitTests/: CMakeLists.txt  Runner_UnitTest.cpp  TimeChecker_UnitTest.cpp  TimeLoader_UnitTest.cpp  TimerMock.h  Timer_UnitTest.cpp
